# llming-flute

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md  deployment.md  extending.md  index.md  quotas.md  redis-protocol.md  security.md  testing.md  workers.md
k8s/: namespace.yaml  secret.yaml  worker-image-processor.yaml  worker-python.yaml
llming_flute/flute/: __init__.py  client.py  handlers.py  quota_rules.py  redis_conn.py  server.py  service.py  task_runner.py  ui.py  worker_config.py
samples/: file_processing.py  hello_world.py  live_logs.py  matplotlib_chart.py  parallel_charts.py  parallel_stress.py
samples/editor/: app.py  index.html
scripts/: install_worker_deps.py
tests/: conftest.py  test_client.py  test_handlers.py  test_integration.py  test_quota_rules.py  test_redis_conn.py  test_server.py  test_service.py  test_task_runner.py  test_ui.py  test_worker_config.py
workers/image-processor/: handler.py  pyproject.toml  service.py
workers/python/: pyproject.toml
workers/python/samples/: controls_playground.py  grid_dashboard.py  index.json  matplotlib_export.py  plotly_bar.py  plotly_heatmap.py  plotly_scatter.py  split_chart_table.py  table_basic.py  table_pandas.py  tabs_multi.py  three_curves.py  three_mesh.py  three_primitives.py  three_surface.py
