[project]
name = "image-processor"
description = "Image processing service: grayscale, resize (multi-step pipelines)"
dependencies = [
    "pillow>=10.0",
]

[tool.flute.worker]
type = "service-runner"
handler = "service:ImageService"
description = "Long-lived image processing service with multi-step pipeline support"
operations = ["grayscale", "resize"]
accept_files = ["image/*"]
